# de-songs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: etl.py  main.py  orm_classes.py  read.py  setup.py  tables.py  utils.py
