[tool.poetry]
name = "million-songs"
version = "0.1.0"
description = "ETL pipeline for the million songs dataset with Docker, SQLAlchemy and Postgres."
authors = ["Alexander Butz <alex.butz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
python-on-whales = "^0.46.0"
SQLAlchemy = "^1.4.37"
pandas = "^1.4.2"
tables = "^3.7.0"
h5py = "^3.7.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
darglint = "^1.8.1"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
mypy = "^0.960"
pep8-naming = "^0.13.0"
pydocstyle = "^6.1.1"
black = "^22.3.0"
ipykernel = "^6.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
